--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
     </style>
 </head>
 <body>
-    <header class="p-5 md:p-24 bg-[#FFFBF0]">
+    <header class="p-5 lg:pl-24 lg:pr-24  bg-[#FFFBF0]">
+
+        <nav class="w-[100%] h-[100px] flex justify-between items-center">
+            <h1 class="font-bold text-3xl">Hot <span class="text-orange-900">Winter</span></h1>
+            <!-- =============================================================================problem -->
+            <ul class="hidden sm:flex">                                               
+                <li class="mr-[30px]"><a href="home">Home</a></li>
+                <li class="mr-[30px]"><a href="about">About</a></li>
+                <li class="mr-[30px]"><a href="collections">Collections</a></li>
+                <li class="mr-[30px]"><a href="try">Try On</a></li>
+                <li class="mr-[30px]"><a href="log">Sign Up</a></li>
+            </ul>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-8 h-8 flex lg:hidden ">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+              
+        </nav>
 
         <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="space-y-5">
